--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="all-content">
     <nav class="navbar navbar-expand-lg" id="navbar">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#" id="logo"><img src="./images/logo2.png" height="50px" width="50px"
+        <a class="navbar-brand" href="#" id="logo"><img src="logo2.png" height="50px" width="50px"
             style="border-radius: 50px;" alt=""></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -81,7 +81,7 @@
       <div class="row">
         <div class="col-md-6">
           <div class="card">
-            <img src="./images/pic5.jpg" alt="">
+            <img src="pic5.jpg" alt="">
 
           </div>
         </div>
@@ -104,19 +104,19 @@
       <div class="row">
         <div class="col-md-4 py-3 py-md-0">
           <div class="card">
-            <img src="./images/pic15.jpg" alt="">
+            <img src="pic15.jpg" alt="">
           </div>
         </div>
 
         <div class="col-md-4 py-3 py-md-0">
           <div class="card">
-            <img src="./images/pic1.jpg" alt="">
+            <img src="pic1.jpg" alt="">
           </div>
         </div>
 
         <div class="col-md-4 py-3 py-md-0">
           <div class="card">
-            <img src="./images/pic3.jpg" alt="">
+            <img src="pic3.jpg" alt="">
           </div>
         </div>
       </div>
@@ -135,7 +135,7 @@
       <div class="row">
         <div class="col-md-3 py-3 py-md-0">
           <div class="card">
-            <img src="./images/pic7.jpg" alt="">
+            <img src="pic7.jpg" alt="">
 
             <div class="card-body">
               <div class="star text-center">
@@ -154,7 +154,7 @@
 
         <div class="col-md-3 py-3 py-md-0">
           <div class="card">
-            <img src="./images/pic13.jpg" alt="">
+            <img src="pic13.jpg" alt="">
 
             <div class="card-body">
               <div class="star text-center">
@@ -174,7 +174,7 @@
 
         <div class="col-md-3 py-3 py-md-0">
           <div class="card">
-            <img src="./images/pic14.jpg" alt="">
+            <img src="pic14.jpg" alt="">
 
             <div class="card-body">
               <div class="star text-center">
@@ -193,7 +193,7 @@
 
         <div class="col-md-3 py-3 py-md-0">
           <div class="card">
-            <img src="./images/pic19.jpg" alt="">
+            <img src="pic19.jpg" alt="">
 
             <div class="card-body">
               <div class="star text-center">
@@ -216,7 +216,7 @@
       <div class="row" style="margin-top: 40px;">
         <div class="col-md-3 py-3 py-md-0">
           <div class="card">
-            <img src="./images/shop1 (1).jpg" alt="">
+            <img src="shop1 (1).jpg" alt="">
 
             <div class="card-body">
               <div class="star text-center">
@@ -236,7 +236,7 @@
 
         <div class="col-md-3 py-3 py-md-0">
           <div class="card">
-            <img src="./images/shop1 (2).jpg" alt="">
+            <img src="shop1 (2).jpg" alt="">
 
             <div class="card-body">
               <div class="star text-center">
@@ -256,7 +256,7 @@
 
         <div class="col-md-3 py-3 py-md-0">
           <div class="card">
-            <img src="./images/shop1 (3).jpg" alt="">
+            <img src="shop1 (3).jpg" alt="">
 
             <div class="card-body">
               <div class="star text-center">
@@ -276,7 +276,7 @@
 
         <div class="col-md-3 py-3 py-md-0">
           <div class="card">
-            <img src="./images/shop1 (4).jpg" alt="">
+            <img src="shop1 (4).jpg" alt="">
 
             <div class="card-body">
               <div class="star text-center">
@@ -307,7 +307,7 @@
       <div class="row">
         <div class="col-md-3 py-3 py-3">
           <div class="card">
-            <img src="./images/pic2.jpg" alt="">
+            <img src="pic2.jpg" alt="">
             <div class="card-body">
               <h3>Instant Pure-Coffee</h3>
               <p>$100 <strike> $150 </strike> <span class="fa-solid fa-cart-shopping"></span></p>
@@ -318,7 +318,7 @@
 
         <div class="col-md-3 py-3 py-3">
           <div class="card">
-            <img src="./images/coffee-1257064_1920.jpg" alt="">
+            <img src="coffee-1257064_1920.jpg" alt="">
             <div class="card-body">
               <h3>Luxuary Dust-Coffee</h3>
               <p>$180 <strike>$250</strike> <span class="fa-solid fa-cart-shopping"></span></p>
@@ -329,7 +329,7 @@
 
         <div class="col-md-3 py-3 py-3">
           <div class="card">
-            <img src="./images/pic9.jpg" alt="">
+            <img src="pic9.jpg" alt="">
             <div class="card-body">
               <h3>Quality Gold Coffee</h3>
               <p>$170 <strike>$280</strike> <span class="fa-solid fa-cart-shopping"></span></p>
@@ -340,7 +340,7 @@
 
         <div class="col-md-3 py-3 py-3">
           <div class="card">
-            <img src="./images/new (1).jpg" height="460px" alt="">
+            <img src="new (1).jpg" height="460px" alt="">
             <div class="card-body">
               <h3>Premium Stack_Coffee</h3>
               <p>$120 <strike>$150</strike> <span class="fa-solid fa-cart-shopping"></span></p>
@@ -358,19 +358,19 @@
     <div class="row" style="margin-top: 40px;">
     <div class="col-md-4 py-3 py-md-0">
       <div class="card">
-        <img src="./images/lis1 (1).jpg" alt="">
+        <img src="lis1 (1).jpg" alt="">
       </div>
     </div>
 
     <div class="col-md-4 py-3 py-md-0">
       <div class="card">
-        <img src="./images/lis1 (11).jpg" alt="">
+        <img src="lis1 (11).jpg" alt="">
       </div>
     </div>
 
     <div class="col-md-4 py-3 py-md-0">
       <div class="card">
-        <img src="./images/lis1 (3).jpg" alt="">
+        <img src="lis1 (3).jpg" alt="">
       </div>
     </div>
 
@@ -380,19 +380,19 @@
   <div class="row" style="margin-top: 30px;">
     <div class="col-md-4 py-3 py-md-0">
       <div class="card">
-        <img src="./images/lis1 (4).jpg" alt="">
+        <img src="lis1 (4).jpg" alt="">
       </div>
     </div>
 
     <div class="col-md-4 py-3 py-md-0">
       <div class="card">
-        <img src="./images/lis1 (10).jpg" alt="">
+        <img src="lis1 (10).jpg" alt="">
       </div>
     </div>
 
     <div class="col-md-4 py-3 py-md-0">
       <div class="card">
-        <img src="./images/lis1 (6).jpg" alt="">
+        <img src="lis1 (6).jpg" alt="">
       </div>
     </div>
 
@@ -447,7 +447,7 @@
 
         <div class="col-md-4 py-3 py-md-0">
           <div class="card">
-            <img src="./images/shop1 (2).jpg" alt="">
+            <img src="shop1 (2).jpg" alt="">
             <div class="card-body">
               <h3>lorem ipsum dolor.</h3>
               <h5>Admin / 6 March 2024</h5>
@@ -459,7 +459,7 @@
 
         <div class="col-md-4 py-3 py-md-0">
           <div class="card">
-            <img src="./images/shop1 (5).jpg" alt="">
+            <img src="shop1 (5).jpg" alt="">
             <div class="card-body">
               <h3>lorem ipsum dolor.</h3>
               <h5>Admin / 6 March 2024</h5>
@@ -492,7 +492,7 @@
    </footer>
 
 
-   <a href="#" class="arrow"><i><img src="./images/pic10.png" alt="" width="50px"></i></a>
+   <a href="#" class="arrow"><i><img src="pic10.png" alt="" width="50px"></i></a>
 
 
 
